<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Random Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="button_Stop">Stop</string>
    <string name="button_rewind">&lt;&lt;</string>
    <string name="button_fastforward">&gt;&gt;</string>
    <string name="button_select_song">&#8230;</string>
    <string name="edittext_hint">Pick song</string>
    <string name="button_add_section">Add Section</string>
    <string name="button_pause">Pause</string>
    <string name="button_remove">Remove Selected</string>
    <string name="text_by"> By </string>
    <string name="text_unknown">Unknown</string>
    <string name="text_section_type">Section Type</string>
    <string name="dialog_type_picker_title">Pick a type…</string>
    <string-array name="SectionTypes">
        <item >Random</item>
        <item >Ordered</item>
    </string-array>
    <string name="button_move_up_song">Up</string>
    <string name="button_move_down_song">Down</string>
    <string name="text_number_of_random_song"># to play</string>
    <string name="button_number_random_songs">#</string>
    <string name="dialog_choose_number">Play how many random songs?</string>
    <string name="button_number_picker_ok">Ok</string>

</resources>
