<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonAddSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_section" />

    <Button
        android:id="@+id/buttonRemoveSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_remove" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonMoveSongDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_move_down_song" />

        <Button
            android:id="@+id/buttonMoveSongUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_move_up_song" />

    </LinearLayout>

</LinearLayout>
